--- a/src/css/_resizers.scss
+++ b/src/css/_resizers.scss
@@ -1,7 +1,7 @@
+// リサイザーズ--------------------------------------------------------------------------------
 .resizers{
     width: 100%;
     height: 100%;
-    box-sizing: border-box;
 }
 .resizers .resizer{
     width: 20px;
@@ -17,6 +17,9 @@
     line-height: calc(#{$footer-height} - 10px);
     text-align: center;
     cursor: n-resize;
+}
+.resizers .top:hover {
+    color: #03a9f4;
 }
 .resizers .resizer.left {
     left: 0;
@@ -46,7 +49,7 @@
 .resizers .resizer.top-left {
     left: -5px;
     top: -5px;
-    cursor: nwse-resize; /*resizer cursor*/
+    cursor: nwse-resize;
 }
 .resizers .resizer.top-right {
     right: -5px;
