--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -156,7 +156,7 @@ div {
     margin-left: 120px;
     width: 50%;
 }
-#year-range-ticks-pref, #year-range-ticks-city {
+.year-range-ticks {
     margin-top: -25px;
     display: flex;
     justify-content: space-between;
@@ -169,7 +169,7 @@ div {
     padding-right: 8px;
     padding-left: 11px;
 }
-#year-range-ticks-pref .tick, #year-range-ticks-city .tick{
+.year-range-ticks .tick{
     position: relative;
     display: flex;
     justify-content: center;
@@ -187,7 +187,7 @@ div {
     color: #fff;
     border-radius: 2px;
     pointer-events: none;
-    z-index: 99999999;
+    z-index: 1;
 }
 /* Creates a small triangle extender for the tooltip */
 .d3-tip:after {
