散布図スライダー横に年の表示を追加

--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -113,9 +113,9 @@ div {
 .handle-icon:hover {
     color: #03a9f4;
 }
-.pref-top {
-    text-align: center;
-}
+//.pref-top {
+//    text-align: center;
+//}
 
 // ツールチップ---------------------------------------------------------------------------------
    .d3-tooltip {
@@ -146,12 +146,18 @@ div {
     width: 0;
     height: 0;
 }
-#year-range-text-pref, #year-range-text-city {
+.year-range-text {
     position: absolute;
     top:10px;
     left:30px;
     font-size: 30px;
 }
+//#year-range-text-pref, #year-range-text-city {
+//    position: absolute;
+//    top:10px;
+//    left:30px;
+//    font-size: 30px;
+//}
 .year-range-div {
     margin-left: 120px;
     width: 50%;
