--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -21,7 +21,8 @@ div {
 }
 #app {
     height: 100%;
-    font-family: 'Avenir', Helvetica, Arial, sans-serif;
+    //font-family: 'Avenir', Helvetica, Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #2c3e50;
