--- a/src/css/_range.scss
+++ b/src/css/_range.scss
@@ -1,6 +1,6 @@
 input[type=range] {
     height: 26px;
-    -webkit-appearance: none;
+    appearance: none;
     margin: 0 0;/*修正*/
     padding: 0;
     width: 100%;
@@ -27,7 +27,7 @@ input[type=range]::-webkit-slider-thumb {
     border-radius: 18px;
     background: #DADADA;
     cursor: grab;
-    -webkit-appearance: none;
+    appearance: none;
     margin-top: -7.5px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
